fixed overflow issue all content centred on page

--- a/css/css.css
+++ b/css/css.css
@@ -6,12 +6,17 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     -webkit-font-smoothing: antialiased;
+    overflow-y:hidden;
 }
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
 .tabbx{
   box-shadow: 0px 1px 3px #000000;
